Quorum3/Library/Tests/TypeChecker/Pass/ExpAssignObjectText.quorum
class Main
    action Main
        Object o        
        o = cast(Object, "text")
        output "passed"
    end
end