Quorum3/Library/Tests/TypeChecker/Fail/ExpAssignBoolObjTextField.quorum
class main
    Boolean bool
    action Main
        bool = cast(Boolean, "text")
    end
end